# MKANet

./: LICENSE  README.md  README.md~
deploy_cpu/: README.md  README.md~  test.py  test.py~  tf_complie.sh~
deploy_cpu/log/: log_train.txt  model.ckpt.data-00000-of-00001  model.ckpt.index
deploy_cpu/results/: predicted.ply  predicted.txt
deploy_cpu/test_data/: 0.ply  1.ply  2.ply  3.ply  4.ply
train_gpu/: #memo#  .#memo  README.md  README.md~  train.py  train.py~
train_gpu/utils/: compile.sh~  pointnet_util.py
train_gpu/utils/tf_ops/: compile.sh  compile.sh~
train_gpu/utils/tf_ops/3d_interpolation/: tf_compile.sh  tf_interpolate.py
train_gpu/utils/tf_ops/grouping/: tf_compile.sh  tf_grouping.py
train_gpu/utils/tf_ops/sampling/: tf_compile.sh
utils/: CMakeLists.txt  CMakeLists.txt~  README.md  combine_pc.py  recover_h5_to_ply.py  recover_h5_to_ply.py~  scene_generation.py  scene_generation.py~  show_traj.cpp  show_traj.cpp~
utils/dataset/train_data/bottle/pour/01/: frame0000.ply  frame0000.txt
utils/dataset/train_data/cup/poured_l/01/: frame0000.txt  frame0000.txt~  frame0001.txt~
utils/dataset/train_data/cup/poured_r/01/: frame0000.ply  frame0000.txt  frame0000.txt~  frame0001.txt~
